refactor js, .active toggle for steps

--- a/index.html
+++ b/index.html
@@ -15,6 +15,15 @@
     <h1 id="page-title">Family Bundle Calculator</h1>
     <div id="top-bar"></div>
 
+    <div class="component" id="step0">
+      <h2>Summer Sale Blowout</h2>
+      <div class="option-box">
+        <p>Bulk buy phones and accessories to save money for the whole family!</p>
+      </div>
+
+      <button id="done-step0">Begin</button>
+    </div>
+
     <div class="component" id="step1">
       <h2>Planning Money</h2>
       <div class="option-box">
