add showStepZero, big css/js layout tweaks

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="component" id="step0">
       <h2>Summer Sale Blowout</h2>
       <div class="option-box">
-        <p>Bulk buy phones and accessories to save money for the whole family!</p>
+        <p>Bulk-buy phones and accessories to save money for the whole family!</p>
       </div>
 
       <button id="done-step0">Begin</button>
@@ -59,7 +59,7 @@
             <option value="">-Select your accessories</option>
             <option value="30">Earbuds</option>
             <option value="200">iPhone Earpods</option>
-            <option value="2.50">Sony Walkman headphones</option>
+            <option value="3">Walkman headphones</option>
         </select>
       </div>
       <div class="option-box vertical">
@@ -73,7 +73,7 @@
             <option value="6">Six</option>
         </select>
       </div>
-      <div class="option-box">
+      <div class="option-box button">
         <button id="back-step2" class="back">Back</button>
         <button id="done-step2" class="next">Next</button>
       </div>
@@ -82,16 +82,16 @@
     <div class="component" id="step3">
       <h2>Selection Summary</h2>
       <div class="option-box vertical">
-        <p id="summary-spent"></p>
+        <p id="summary-spent">Please return to the previous page and be sure to select all items</p>
         <ul class="summary-list">
-          <li id="summary-phone">Please return to the previous page and be sure to select all items</li>
+          <li id="summary-phone"></li>
           <li id="summary-accessory"></li>
           <li id="summary-size"></li>
           <li id="summary-total-spent"></li>
         </ul>
-        <p id="summary-bank">You have $$$ remaining in your account.</p>
+        <p id="summary-bank"></p>
       </div>
-      <div class="option-box">
+      <div class="option-box button">
         <button id="back-step3" class="back">Back</button>
         <button id="done-step3" class="next cart">Add to Cart</button>
       </div>
