fix validation, rm more html from js

--- a/index.html
+++ b/index.html
@@ -85,7 +85,9 @@
     <div class="component" id="step4">
       <h2>Selection Summary</h2>
       <div class="option-box vertical">
-        <p id="summary-spent"></p>
+          <p id="summary-spent-under">Great job! You are <span class='under'>UNDER</span></p>
+          <p id="summary-spent-over">Oh noes, you are <span class='over'>OVER</span></p>
+          <p>your spend limit by <span id="summary-spent-number"></span>!</p>
 
         <ul class="summary-list">
           <li id="summary-phone">
