init webpack setup

--- a/vanilla/index.html
+++ b/vanilla/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <img id="logo" src="horizon-logo.png" alt="Horizon Wireless">
+  <img id="logo" src="../horizon-logo.png" alt="Horizon Wireless">
 
   <div>
     <h1 id="page-title">Family Bundle Calculator</h1>
