--- a/react/src/index.html
+++ b/react/src/index.html
@@ -4,10 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <title>React - Family Bundle Calculator</title>
 </head>
 <body>
-  <div id="hello-example"></div>
+  <div id="app"></div>
 
   <script src="dist/main.js"></script>
 </body>
